# Clear-Cards-Telegram-Bot-

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/: __main__.py
src/bot/: cancel.py  card_interaction.py  core.py  create_deck.py  deck_interaction.py  keyboards.py  managing.py  review.py  show_decks.py  sql_interactions.py
tests/integration/: test_card_creation.py  test_create_deck.py  test_delete_deck.py  test_edit_deck.py  test_init_work.py  test_return_to_menu.py  test_review.py  test_review_new.py  test_show_cards.py  test_show_decks.py
tests/unit/: test_db.py
