[tool.poetry]
name = "bot"
version = "0.1.0"
description = "Flash cards telegram bot for learning which is created in order to simplify studying process by enhancing memorising"
authors = ["Timur Tamocv"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.0,<4.0.0"
aiogram = "^3.21.0"
python-dotenv = "^0.9"  # Или "0.9.9"
aiosqlite = "^0.21.0"
black = "^25.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
pytest-mock = "^3.14.1"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
